# Vivi

./: models.mdj
vivi_backend/: .gitignore  Cargo.toml
vivi_backend/src/: db.rs  lib.rs  main.rs  sign.rs  user.rs
vivi_backend/src/model/: article.rs  basic.rs  comment.rs  db.rs  mod.rs  user.rs
vivi_backend/src/tool/: error.rs  mod.rs  sign.rs  test.rs
vivi_spring/: pom.xml
vivi_spring/src/main/java/com/example/vivi/: ViviSpringApplication.java
vivi_spring/src/main/java/com/example/vivi/controller/: ArticleController.java  LoginController.java  UserCenterController.java
vivi_spring/src/main/java/com/example/vivi/dao/: ArticleDAO.java  (+2 more)
vivi_spring/src/main/resources/: application.properties  application.yml
vivi_spring/src/test/java/com/example/vivi/: ViviSpringApplicationTests.java
vivi_vue/: package-lock.json  package.json
vivi_vue/config/: index.js
vivi_vue/src/: App.vue  main.js
vivi_vue/src/assets/utils/: avatarGetter.js  dateFilter.js  followAndMessage.js  graphCoder.js
vivi_vue/src/components/: Home.vue  Login.vue  Register.vue
vivi_vue/src/components/common/: Avatar.vue  ButtonGroup.vue  Comments.vue  EditDialog.vue  NavMenu.vue  OneLineDesc.vue  articleHeader.vue  commentCard.vue  imgShowCard.vue  itemCard.vue  profileForm.vue  replyCard.vue
vivi_vue/src/components/home/: AppIndex.vue  Article.vue  FollowIndex.vue  Publish.vue  UserCenter.vue
vivi_vue/src/components/test/: Test.vue
vivi_vue/src/router/: index.js
vivi_vue/src/store/: index.js
vivi_vue/static/icon/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
(+9 files in other folders)
