[package]
name = "vivi"
version = "0.0.1"
authors = ["little-csd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.mongodb]
version = "2.0.0-alpha.1"
default-features = false
features = ["sync"]
